# OpenGalois

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  design.md  feature.md
.github/instructions/: legacy.instructions.md
.github/workflows/: ci.yaml  schema-fixtures.yaml  v3_ruleset_ci.yml
docs/: adding-a-fact.md  adding-a-rule.md  certificate-format.md  explain.md  facts.md  objects.md  overview.md  resolvents.md  rules.md  ruleset.md  verification.md
docs/explain/: narrative-style-guide.md
fixtures/v3/: README.md
legacy/: AGENTS.md  README.md  api.py  certificate.py  explain.py  verify.py
legacy/docs/: algorithm.md  certificate_v1.md  claims.md  flow.md  glossary.md  index.md  plan.md  spec.md  traceability.md
legacy/schemas/: 1.0.1.json  1.1.0.json  2.0.0.json
legacy/tests/: test_api_contract.py  test_jcs_vector.py  (+7 more)
tests/: test_api_coeff_parsing.py  test_cardano_v2_fixtures.py  test_cli_analyze.py  test_cli_layout.py  test_cli_radical_roots_display.py  test_cli_verify.py  test_deg4_ferrari_v2_engine_smoke.py  test_deg4_ferrari_v2_fixtures.py  test_deg4_pair_sums_kappe_warren_formula.py  test_deg4_pair_sums_resolvent_equivalence.py  test_deg4_pair_sums_v2_pipeline.py  test_deg4_pair_sums_v2_regression_equivalence.py  test_deg5_dummit_two_quadratics.py  test_deg5_engine_normalization_and_regression.py  test_deg5_pipeline.py  test_desc_qx.py  test_dummit_paper_examples.py  test_dummit_quintic_tables.py  test_engine_deg1_radical_roots.py  test_engine_deg2_radical_roots.py  test_engine_deg3_cardano_v2_emission.py  test_engine_deg3_radical_roots.py  test_engine_irreducible_deg3_pipeline.py  test_engine_reducible_wiring.py  test_explain_deg4_pair_sums_v2.py  test_explain_irreducible_zassenhaus_trace.py  test_explain_nonsquare_v2.py  test_factorization_fpx_cantor_zassenhaus.py  test_fixtures.py  test_galois_group.py  test_hensel_factorization.py  test_hensel_factorization_refactor.py  test_irreducible_QQ_to_depressed_monic_rule.py  test_irreducible_deg4_pipeline_conrad.py  test_jcs_vector.py  test_kappe_warren_pair_sums_node.py  test_mpoly_integration.py  test_no_sympy_imports.py  test_radical_expr_verify.py  test_radical_roots_deg5_mcclintock_rule.py  (+44 more)
tools/: bench_dummit_resolvent_current_vs_factorization.py  check_ruleset_consistency.py  export_mcclintock_cases.py  generate_c5_families.py  run_deg4_examples.sh  search_deg5_box.py  verify_v3_fixtures.py
(+452 files in other folders)
